deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: conv-app
